<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/verdefondo">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/studentdata"
        android:textSize="40sp"
        android:textColor="@color/blanco"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="15dp"
        android:text="@string/id"
        android:textColor="@color/blanco"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/idtv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView3"
        android:layout_toEndOf="@+id/textView3"
        android:text=""
        android:layout_marginStart="7dp"
        android:textColor="@color/blanco"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView3"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="15dp"
        android:textColor="@color/blanco"
        android:textSize="20sp"
        android:text="@string/nombre" />

    <TextView
        android:id="@+id/nametv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView5"
        android:layout_toEndOf="@+id/textView5"
        android:text=""
        android:textColor="@color/blanco"
        android:textSize="20sp"
        android:layout_marginStart="7dp"/>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView5"
        android:layout_below="@+id/textView5"
        android:layout_marginTop="15dp"
        android:text="@string/fechanac"
        android:textColor="@color/blanco"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/fechanactv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView7"
        android:layout_toEndOf="@+id/textView7"
        android:text=""
        android:textColor="@color/blanco"
        android:textSize="20sp"
        android:layout_marginStart="7dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@color/grisfondo">

        <ImageView
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@android:drawable/ic_delete"
            android:tint="@color/naranja"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/update" />

        <ImageView
            android:id="@+id/update"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@android:drawable/ic_menu_edit"
            android:tint="@color/naranja"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/textView" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="" />


    </RelativeLayout>


</RelativeLayout>